fix heading wrap

--- a/blog-preview-card-main/style.css
+++ b/blog-preview-card-main/style.css
@@ -58,6 +58,9 @@ img {
     font-size: 14px;
 }
 
+.card__heading {
+    text-wrap: nowrap;
+}
 .card__heading:hover {
     color: hsl(47, 88%, 63%);
 }
